--- a/style.css
+++ b/style.css
@@ -1,1 +1,122 @@
+body {
+  background: linear-gradient(to bottom, #68eacc 0%, #497be8 100%);
+  font-family: "Montserrat", sans-serif;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+button {
+  border: 1px solid rgb(24, 23, 23);
+}
+input,
+p {
+  font-size: 1.2rem;
+  padding-left: 1rem;
+}
+.container {
+  height: 100vh;
+  width: 70%;
+  margin: auto;
+  border-radius: 5px;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+h1 {
+  font-size: 2.5rem;
+  text-align: center;
+}
+.wrapper {
+  box-shadow: -3px -3px 7px #ffffff73, inset 3px 3px 5px rgba(94, 104, 121, 288);
+  border: 1px solid white;
+  padding: 5px;
+  height: 15vh;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.wrapper input {
+  width: 50vw;
+  height: 2.6rem;
+}
+.wrapper button {
+  width: 3rem;
+  padding: 8px;
+  background-color: rgb(218, 171, 109);
+}
 
+.list-group {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.newlist {
+  box-shadow: -3px -3px 7px #ffffff73, inset 3px 3px 5px rgba(94, 104, 121, 288);
+  border: 1px solid white;
+  display: flex;
+  height: 3rem;
+  width: 40vw;
+}
+.newlist p {
+  width: 100%;
+  border: 1px solid black;
+  padding: 1rem;
+}
+.trash-btn,
+.complete-btn {
+  width: 10%;
+  align-items: flex-end;
+  background-color: rgb(218, 171, 109);
+  cursor: pointer;
+}
+
+i {
+  font-size: 1.2rem;
+  pointer-events: none;
+}
+a i {
+  color: black;
+  font-size: 1.6rem;
+  display: block;
+  border: 1px solid black;
+}
+.completed {
+  text-decoration: line-through;
+  opacity: 0.4;
+  background-color: #60a0d2;
+}
+
+#clear {
+  font-size: 1.2rem;
+  width: 20%;
+  height: 2.2rem;
+  margin: 0 50px;
+  border-radius: 5px 15px;
+  border: 1px solid black;
+  background-color: rgb(218, 171, 109);
+}
+#clear:hover {
+  background-color: rgb(85, 220, 101);
+}
+
+/* Media Query for Mobile Devices */
+@media (max-width: 480px) {
+  .container {
+    width: 100%;
+  }
+  .newlist {
+    height: 3rem;
+    width: 80vw;
+  }
+  #clear {
+    font-size: 1rem;
+    width: 40%;
+  }
+}
